# verifier

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DEVELOPMENT.md  KNOWN_LIMITATIONS.md  ROADMAP.md
docs/decisions/: 0001-deterministic-verification-not-llm-judging.md  0002-cli-before-mcp.md  0003-no-confidence-float-discrete-statuses.md  0004-verify-citation-first-check-source-next.md  0005-v1-verdict-contract.md  0006-logging-and-verdict-persistence.md  0007-sentence-scoped-contradiction-regions.md  0008-length-preserving-normalization.md  0009-single-candidate-entity-conflict.md  0010-entity-extraction-scope.md  README.md
examples/: README.md
scripts/: README.md
src/verifier/: __init__.py  cli.py  extraction.py  judgment.py  models.py  verdict.py
tests/: conftest.py  test_derive_status.py  test_extraction.py  test_smoke.py  test_verdict.py
