[project]
name = "verifier"
version = "0.0.0"
description = "Independently fact-check the citations an AI agent produces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matthew Huang" }]
keywords = ["mcp", "verification", "citations", "fact-checking", "agents"]

# Core runtime deps for the V1 verify_citation slice. Kept deliberately small
# (brutally-small V1). Heavier NLP/semantic deps are optional extras, not core.
dependencies = [
    "pydantic>=2",   # typed boundaries + the verdict schema
    "httpx>=0.27",   # independent source fetch
    "trafilatura>=1.8",  # readable-text extraction
    "rapidfuzz>=3",  # fuzzy quote matching
]

[project.optional-dependencies]
# MCP surface. Provisional pin — the v1-pin vs standalone-fastmcp-3.x vs new-spec
# decision is made in the contract/MCP step; the <2 upper bound is the safe default
# until the official SDK's stable v2 (targeted ~2026-07-28) lands.
mcp = ["mcp>=1.27,<2"]
# Semantic support layer — deferred to v2 (see ROADMAP). Listed, not depended on.
# semantic = ["spacy>=3.7", "sentence-transformers>=3"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
verifier = "verifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=verifier --cov-report=term-missing"
testpaths = ["tests"]
